トップページ等修正

--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -30,12 +30,13 @@
 					<input type="text" name="TmpUser[mail]" placeholder="Eメール" class="forms"/>
 				</div>
 				<div class="check">
-					<input type="checkbox" name="agreement"><a href="http://padule.me/agrement">利用規約</a><span>同意する</span>
+					<!--<input type="checkbox" name="agreement"><a href="http://padule.me/agrement">利用規約</a><span>同意する</span>-->
 				</div>
 				<div>
 				 	<input type="submit" value="仮登録する!!" id="btn_preRegister" />
 				</div>
 			 </form>
+                <div style="text-align:center">ベータ版ログインは<a href="/users/login/"class="">こちら</a></div>
 		 </header>
 		 <article class="span12" id="explain">
 			 <ul>
