トップページ修正

--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -30,15 +30,15 @@
 					<input type="text" name="TmpUser[mail]" placeholder="Eメール" class="forms"/>
 				</div>
 				<div class="check">
-					<!--<input type="checkbox" name="agreement"><a href="http://padule.me/agrement">利用規約</a><span>同意する</span>-->
+					<input type="checkbox" name="agreement"><a href="/terms.html">利用規約</a><span>同意する</span>
 				</div>
 				<div>
 				 	<input type="submit" value="仮登録する!!" id="btn_preRegister" />
 				</div>
 			 </form>
-                <div style="text-align:center">ベータ版ログインは<a href="/users/login/"class="">こちら</a></div>
 		 </header>
 		 <article class="span12" id="explain">
+		 	<div style="text-align:center">ベータ版ログインは<a href="/users/login/"class="">こちら</a></div>
 			 <ul>
 			 	<li class="feature">
 				 	<div class="icons"><img src="img/icon_calendar.png" alt="icon_calendar" width="72" height="72"></div>
@@ -82,8 +82,8 @@
 		<footer class="span12">
 		 	<p><推奨動作環境>　OS : Windows 7以上, Mac X以上 / ブラウザ : IE8以上, Chrome 最新版</p>
 			 <ul>
-			 	<li><a href="http://padule.me">プライバシーポリシー</a></li>
-			 	<li><a href="support@padule.me">お問い合わせ</a></li>
+			 	<li><a href="/privacy.html">プライバシーポリシー</a></li>
+			 	<li><a href="mailto:padule@outlook.com">お問い合わせ</a></li>
 			 </ul>
 		</footer>
 	 </div><!-- row -->
