change landing page.

--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -1,97 +1,157 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
   <head>
-  <meta charset="utf-8">
-   <title>Padule - 日程調整をパズル感覚で</title>
-   <meta name="description" content="同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。">
-   <meta name="Keywords" content="調整,スケジュール,面接,日程,リクルート" />
-   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-   <link rel="stylesheet" href="css/default.css" type="text/css" />
+    <title>Padule -日程調整をパズル感覚で-</title>
+    <link href='img/favicon.ico' rel='shortcut icon'>
+    <link href='css/bootstrap.min.css' rel='stylesheet'>
+    <link href='css/landing.css' rel='stylesheet'>
+    <meta content='調整,スケジュール,面接,日程,リクルート' name='keywords'>
+    <meta content='同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。' name='description'>
+    <meta content='Padule' property='og:title'>
+    <meta content='' property='og_image'>
+    <meta content='' property='og:description'>
+    <meta content='website' property='og:type'>
+    <meta content='http://padule.me' property='og:url'>
+    <meta content='Padule' property='og:site_name'>
+    <meta charset='utf-8'>
+    <meta content='width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   </head>
   <body>
- <section class="container">
-	 <div class="row">
-		 <header class="span12">
-		 	<div id="lp_mac"><img src="img/mac.png" alt="PaduleUI" width="504" height="515"></div>
-			<div id="lp_logo"><img src="img/logo.png" alt="Padule" width="322" height="55"></div>
-			<p>同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。</p>
-			<form id="registerForms" action="/users/regist" method="post" accept-charset="utf-8">
-			<div id="msg_alert" style="display:none;"><p>※すべての項目を入力し、利用規約に同意してください。</p></div>
-			<div id="messageBox"></div> 
-				<div>
-					<input type="text" name="TmpUser[company]" placeholder="会社名" class="forms"/>
-				</div>
-				<div>
-					<input type="text" name="TmpUser[username]" placeholder="お名前" class="forms"/>
-				</div>
-				<div>
-					<input type="text" name="TmpUser[mail]" placeholder="Eメール" class="forms"/>
-				</div>
-				<div class="check">
-					<input type="checkbox" name="agreement"><a href="/terms.html">利用規約</a><span>同意する</span>
-				</div>
-				<div>
-				 	<input type="submit" value="仮登録する!!" id="btn_preRegister" />
-				</div>
-			 </form>
-		 </header>
-		 <article class="span12" id="explain">
-		 	<div style="text-align:center">ベータ版ログインは<a href="/users/login/"class="">こちら</a></div>
-			 <ul>
-			 	<li class="feature">
-				 	<div class="icons"><img src="img/icon_calendar.png" alt="icon_calendar" width="72" height="72"></div>
-					<h1>シンプルで簡単に使える！</h1>
-					<p>面接日時を設定して、URLを応募者に送るだけ。あとは応募者が自ら入力し、<br />希望日時が一覧で表示されます。</p>
-			 	</li>
-			 	<li class="feature">
-				 	<div class="icons"><img src="img/icon_stack.png" alt="icon_stack" width="72" height="72"></div>
-					<h1>スピーディーに調整できる！</h1>
-					<p>URLを送ることで採用担当者様と応募者が直接調整できるので、人材会社が仲介して遅くなる心配もありません。</p>
-			 	</li>
-			 	<li class="feature">
-				 	<div class="icons"><img src="img/icon_money.png" alt="icon_money" width="72" height="72"></div>
-					<h1>基本利用料は無料！</h1>
-					<p>本サービスは広告費にて運用致しますので、採用ご担当者様に費用は頂戴いたしません。社内承認不要でお気軽にお使いいただく事ができます。</p>
-			 	</li>
-			 </ul>
-		 </article><!-- explain -->
-		 <article class="span12" id="screenshot">
-		 	<hr>
-			<div class="img_screenshots"><img src="img/web.png" alt="Web" width="458" height="391"></div>
-			<div id="captions">
-				<div>
-					<h1>候補者全員を１ページで管理！</h1>
-					<p>一人一人調整するのは煩雑ではありませんか？<br />Paduleなら候補者全員の候補日時を一括管理、<br />ご希望の選択して一斉に確定メールを送ることができます。</p>
-				</div>
-				<div>
-					<h1>共通の入力画面で<br />ダブルブッキングの心配なし！</h1>
-					<p>複数の候補者から同じ日時を希望されてお困りではありませんか?<br />Paduleなら候補日時はリアルタイムで更新されるので、<br />ダブルブッキングの心配はありません。</p>
-				</div>
-			</div>
-		</article><!-- sreenshot -->
-		<article class="span12" id="screenshotSmart">
-		 	<hr>
-			<div id="caption_smart">
-				<h1>スマートフォン対応で簡単入力！</h1>
-				<p>求職者からの返信が遅く感じませんか？<br />Paduleならスマートフォン対応でいつでもどこでも簡単に返信できるので、<br />今まで以上に早い返信が期待できます。</p>
-			</div>
-			<div id="img_screenshotsSmart"><img src="img/mobile.png" alt="SmartPhone" width="208" height="338"></div>
-		</article><!-- sreenshot -->
-		<footer class="span12">
-		 	<p><推奨動作環境>　OS : Windows 7以上, Mac X以上 / ブラウザ : IE8以上, Chrome 最新版</p>
-			 <ul>
-			 	<li><a href="/privacy.html">プライバシーポリシー</a></li>
-			 	<li><a href="mailto:padule@outlook.com">お問い合わせ</a></li>
-			 </ul>
-		</footer>
-	 </div><!-- row -->
- </section><!-- container -->
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/default.js"></script>
+    <div class='container landing-container'>
+      <div class='row'>
+        <div class='col-md-4'>
+          <div class='logo-container'></div>
+          <p class='lead'>
+            同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。
+          </p>
+          <form action='/users/regist' class='form-horizontal' method='post' role='form'>
+            <div class='form-group'>
+              <label class='col-sm-3 control-label' for='companyName'>
+                会社名
+              </label>
+              <div class='col-sm-9'>
+                <input class='form-control' id='companyName' name='TmpUser[company]' placeholder='会社名' type='text'>
+              </div>
+            </div>
+            <div class='form-group'>
+              <label class='col-sm-3 control-label' for='userName'>
+                お名前
+              </label>
+              <div class='col-sm-9'>
+                <input class='form-control' id='userName' name='TmpUser[username]' placeholder='お名前' type='text'>
+              </div>
+            </div>
+            <div class='form-group'>
+              <label class='col-sm-3 control-label' for='userMail'>
+                Eメール
+              </label>
+              <div class='col-sm-9'>
+                <input class='form-control' id='userMail' name='TmpUser[mail]' placeholder='Eメール' type='email'>
+              </div>
+            </div>
+            <div class='form-group'>
+              <div class='col-sm-offset-3 col-sm-9'>
+                <div class='checkbox'>
+                  <label>
+                    <input class='forms' type='checkbox'>
+                    <a href='/terms.html'>
+                      利用規約
+                    </a>
+                    に同意する
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class='form-group'>
+              <div class='col-sm-offset-3 col-sm-9'>
+                <a class='btn btn-lg btn-block btn-primary' type='submit'>
+                  仮登録
+                </a>
+              </div>
+            </div>
+            <div class='form-group'>
+              <div class='col-sm-offset-3 col-sm-9'>
+                <a class='btn btn-lg btn-block btn-info' href='/users/login' role='button'>
+                  ベータ版ログイン
+                </a>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class='col-md-8'>
+          <div class='image-container image-main'></div>
+        </div>
+      </div>
+      <div class='row i-catch-container'>
+        <div class='col-md-4'>
+          <div class='i-catch calendar'></div>
+          <h3>シンプルで簡単に使える！</h3>
+          <p class='text'>
+            面接日時を設定して、URLを応募者に送るだけ。あとは応募者が自ら入力し、希望日時が一覧で表示されます。
+          </p>
+        </div>
+        <div class='col-md-4'>
+          <div class='i-catch stack'></div>
+          <h3>スピーディーに調整できる！</h3>
+          <p class='text'>
+            URLを送ることで採用担当者様と応募者が直接調整できるので、人材会社が仲介して遅くなる心配もありません。
+          </p>
+        </div>
+        <div class='col-md-4'>
+          <div class='i-catch money'></div>
+          <h3>基本利用料は無料！</h3>
+          <p class='text'>
+            本サービスは広告費にて運用致しますので、採用ご担当者様に費用は頂戴いたしません。社内承認不要でお気軽にお使いいただく事ができます。
+          </p>
+        </div>
+      </div>
+      <div class='row image-web-container'>
+        <div class='col-md-6'>
+          <div class='image-container image-web'></div>
+        </div>
+        <div class='col-md-6 description-container'>
+          <div class='description'>
+            <h3 class='title'>候補者全員を１ページで管理！</h3>
+            <p>一人一人調整するのは煩雑ではありませんか？</p>
+            <p>Paduleなら候補者全員の候補日時を一括管理、</p>
+            <p>ご希望の選択して一斉に確定メールを送ることができます。</p>
+          </div>
+          <div class='description'>
+            <h3 class='title'>共通の入力画面でダブルブッキングの心配なし！</h3>
+            <p>複数の候補者から同じ日時を希望されてお困りではありませんか？</p>
+            <p>Paduleなら候補日時はリアルタイムで更新されるので、</p>
+            <p>ダブルブッキングの心配はありません。</p>
+          </div>
+        </div>
+      </div>
+      <div class='row image-mobile-container'>
+        <div class='col-md-6'>
+          <div class='description'>
+            <h3 class='title'>スマートフォン対応で簡単入力！</h3>
+            <p>求職者からの返信が遅く感じませんか？</p>
+            <p>Paduleならスマートフォン対応でいつでもどこでも簡単に返信できるので、</p>
+            <p>今まで以上に早い返信が期待できます。</p>
+          </div>
+        </div>
+        <div class='col-md-6'>
+          <div class='image-container image-mobile'></div>
+        </div>
+      </div>
+    </div>
+    <div class='container footer-container'>
+      <div class='pull-left'>
+        [推奨動作環境]　OS : Windows 7以上, Mac X以上 / ブラウザ : IE8以上, Chrome 最新版
+      </div>
+      <div class='pull-right mail-container'>
+        <a href='mailto:padule@outlook.com'>
+          お問い合わせ
+        </a>
+      </div>
+      <div class='pull-right'>
+        <a href='/privacy.html'>
+          プライバシーポリシー
+        </a>
+      </div>
+    </div>
   </body>
 </html>
