--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -17,12 +17,41 @@
     <meta content='width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   </head>
   <body>
+    <div class='navbar navbar-inverse navbar-fixed-top landing-nav' role='navigation'>
+      <div class='container'>
+        <div class='navbar-header'>
+          <a class='navbar-brand' href='/'>
+            <img class='logo' src='/img/logo.png'>
+          </a>
+        </div>
+        <div class='social-container'>
+          <ul class='pull-right'>
+            <li>
+              <!-- Facebook -->
+              <div class="fb-like" data-href="http://padule.me/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+            </li>
+            <li>
+              <!-- Twitter -->
+              <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://padule.me" data-text="Padule -日程調整をパズル感覚で-" data-hashtags="padule">Tweet</a>
+            </li>
+            <li>
+              <!-- GooglePlus -->
+              <div class="g-plusone" data-size="medium"></div>
+            </li>
+            <li>
+              <!-- Hatena -->
+              <a href="http://b.hatena.ne.jp/entry/http://padule.me" class="hatena-bookmark-button" data-hatena-bookmark-title="Padule -日程調整をパズル感覚で-" data-hatena-bookmark-layout="standard-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class='container landing-container'>
       <div class='row'>
-        <div class='col-md-4'>
-          <div class='logo-container'></div>
+        <div class='col-md-5'>
           <p class='lead'>
-            同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。
+            <span>同じ候補日で複数の人を調整するのは大変ではありませんか？</span>
+            <span>Padule（パジュール）を使うことで、簡単に早く調整することができます！</span>
           </p>
           <form action='/users/regist' class='form-horizontal' method='post' role='form'>
             <div class='form-group'>
@@ -78,7 +107,7 @@
             </div>
           </form>
         </div>
-        <div class='col-md-8'>
+        <div class='col-md-7'>
           <div class='image-container image-main'></div>
         </div>
       </div>
@@ -153,5 +182,27 @@
         </a>
       </div>
     </div>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=118785338301077";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script>
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
+    <script>
+      (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+      })();
+    </script>
+    <script async='async' charset='utf-8' src='http://b.st-hatena.com/js/bookmark_button.js' type='text/javascript'></script>
+    <script src='js/libs/jquery-2.0.3.min.js' type='text/javascript'></script>
+    <script src='js/libs/bootstrap.min.js' type='text/javascript'></script>
   </body>
 </html>
