--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -94,14 +94,14 @@
             <div class='form-group'>
               <div class='col-sm-offset-3 col-sm-9'>
                 <a class='btn btn-lg btn-block btn-primary' type='submit'>
-                  仮登録
+                  新規登録する
                 </a>
               </div>
             </div>
             <div class='form-group'>
               <div class='col-sm-offset-3 col-sm-9'>
                 <a class='btn btn-lg btn-block btn-info' href='/users/login' role='button'>
-                  ベータ版ログイン
+                  ベータ版ログインへ
                 </a>
               </div>
             </div>
