--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -166,7 +166,13 @@
           <div class='image-container image-mobile'></div>
         </div>
       </div>
+      <div class='row like-box-container'>
+        <div class='container'>
+          <div class="fb-like-box" data-href="http://www.facebook.com/padule.me" data-width="600" data-height="300" data-colorscheme="light" data-show-faces="true" data-header="false" data-stream="false" data-show-border="false"></div>
+        </div>
+      </div>
     </div>
+    <div id='fb-root'></div>
     <div class='container footer-container'>
       <div class='pull-left'>
         [推奨動作環境]　OS : Windows 7以上, Mac X以上 / ブラウザ : IE8以上, Chrome 最新版
@@ -200,6 +206,15 @@
         po.src = 'https://apis.google.com/js/plusone.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
       })();
+    </script>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
     </script>
     <script async='async' charset='utf-8' src='http://b.st-hatena.com/js/bookmark_button.js' type='text/javascript'></script>
     <script src='js/libs/jquery-2.0.3.min.js' type='text/javascript'></script>
