--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -93,9 +93,7 @@
             </div>
             <div class='form-group'>
               <div class='col-sm-offset-3 col-sm-9'>
-                <a class='btn btn-lg btn-block btn-primary' type='submit'>
-                  新規登録する
-                </a>
+                <input class='btn btn-lg btn-block btn-primary' type='submit' value='新規登録する'>
               </div>
             </div>
             <div class='form-group'>
