modified complete page.

--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -4,6 +4,7 @@
     <title>Padule -日程調整をパズル感覚で-</title>
     <link href='img/favicon.ico' rel='shortcut icon'>
     <link href='css/bootstrap.min.css' rel='stylesheet'>
+    <link href='css/public.css' rel='stylesheet'>
     <link href='css/landing.css' rel='stylesheet'>
     <meta content='調整,スケジュール,面接,日程,リクルート' name='keywords'>
     <meta content='同じ候補日で複数の人を調整するのは大変ではありませんか。Padule（パジュール）を使うことで、簡単に早く調整することができます。' name='description'>
