fix terms page.

--- a/cake/app/webroot/terms.html
+++ b/cake/app/webroot/terms.html
@@ -222,5 +222,13 @@
         <p class='last'>以上</p>
       </div>
     </div>
+    <div class='container footer-container'>
+      <div class='pull-right'>
+        © 2013 Padule Inc. - Started by
+        <a href='http://tokyo.startupweekend.org/'>
+          Startup Weekend Tokyo
+        </a>
+      </div>
+    </div>
   </body>
 </html>
