fix complete page.

--- a/cake/app/webroot/index.html
+++ b/cake/app/webroot/index.html
@@ -84,7 +84,7 @@
                 <div class='checkbox'>
                   <label>
                     <input class='forms' id='termsCheck' type='checkbox'>
-                    <a href='/terms.html'>
+                    <a href='/terms.html' target='_blank'>
                       利用規約
                     </a>
                     に同意する
@@ -190,7 +190,7 @@
         </a>
       </div>
       <div class='pull-right'>
-        <a href='/privacy.html'>
+        <a href='/privacy.html' target='_blank'>
           プライバシーポリシー
         </a>
       </div>
